# gemini-mcp

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: server.py
